--- a/Data preprocessing.ipynb
+++ b/Data preprocessing.ipynb
@@ -2,25 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Data preprocessing"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Data preprocessing"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 1. Covid data"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### 1. Covid data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -57,23 +60,23 @@
     "\n",
     "covid_preprocessor = CovidPreprocess(path=COVID_TEST_DATA_PATH)\n",
     "covid_preprocessor.preprocess()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 2. Political and news data"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### 2. Political and news data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -101,23 +104,23 @@
     "\n",
     "politics_preprocessor = PoliticsPreprocess(path=POLITICAL_AND_NEWS_TEST_DATA_PATH)\n",
     "politics_preprocessor.preprocess()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 3. World news data"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### 3. World news data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -167,10 +170,117 @@
     "\n",
     "world_news_preprocessor = WorldNewsPreprocess(path=WORLD_NEWS_TEST_DATA_PATH)\n",
     "world_news_preprocessor.preprocess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "SPANISH_DATA_PATH = \"data/basic/spanish/espanol.csv\"\n",
+    "spanish_df = pd.read_csv(SPANISH_DATA_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>El suceso ha tenido lugar en Brasil. Un a...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"La quimioterapia mata a la gente y no al cánc...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Los Cubos De Caldo Para Cocinar Son Veneno Par...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MEGATERREMOTO EN LOS PRÓXIMOS DÍAS ALINEACIÓN ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>¡Qué injusticia! El perro que defendió su casa...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  label\n",
+       "0       El suceso ha tenido lugar en Brasil. Un a...      1\n",
+       "1  \"La quimioterapia mata a la gente y no al cánc...      1\n",
+       "2  Los Cubos De Caldo Para Cocinar Son Veneno Par...      1\n",
+       "3  MEGATERREMOTO EN LOS PRÓXIMOS DÍAS ALINEACIÓN ...      1\n",
+       "4  ¡Qué injusticia! El perro que defendió su casa...      1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "spanish_df.fillna('', inplace=True)\n",
+    "spanish_df['text'] = spanish_df.apply(lambda x: x['title'] + ' ' + x['text'], axis=1)\n",
+    "spanish_df = spanish_df[['text', 'label']]\n",
+    "spanish_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_path = \"data/preprocessed/spanish\"\n",
+    "spanish_df.to_json(save_path, orient=\"records\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -182,14 +292,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
